# nix-flake-templates

./: flake.nix
bevy/: .gitignore  Cargo.toml  flake.nix
bevy/.cargo/: config.toml
bevy/src/: main.rs
empty/: .gitignore  flake.nix
gtk/: Cargo.toml  flake.nix  rustfmt.toml
gtk/src/: main.rs
qml/: Cargo.toml  flake.nix
qml/.cargo/: cargo.toml
qml/src/: main.rs
rust/: Cargo.toml  flake.nix
zig/: .gitignore  flake.nix
